@@ -1,3 +1,9 @@
+2008-06-11  Tor Lillqvist  <tml@novell.com>
+
+	* glib/gmain.c
+	* glib/gspawn.c: Clarify what a "child pid" is in the doc
+	comments.
+
 2008-06-10  Matthias Clasen  <mclasen@redhat.com>
 
 	Bug 536158 – also bump GHashTable version when a node is removed via
